--- a/parlagfu.html
+++ b/parlagfu.html
@@ -10,8 +10,28 @@
 </head>
 
 <body>
-    <table id="elso">
-        <tr><td></td></tr>
+    <table id="elso" cellspacing=0 cellpadding=0>
+        <tr>
+            <td>
+                <table id="masodik" cellspacing=1 cellpadding=0>
+                    <tr>
+                        <td colspan="6"> <img src="cim.png" alt="Kép a parlagfűről"></td>
+
+                    </tr>
+                    <tr id="sor2">
+                        <td>Előfordulása</td>
+                        <td>Fejlődése</td>
+                        <td>Terjedése</td>
+                        <td>Parlagfű allergia</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td colspan="6"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
 
     </table>
 </body>
