--- a/irtas.html
+++ b/irtas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,41 @@
     <title>A parlagfűről</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <table></table>
-    
+    <table id="elso" cellspacing=0 cellpadding=0>
+        <tr>
+            <td>
+                <table id="masodik" cellspacing=1 cellpadding=0>
+                    <tr>
+                        <td colspan="6"> <img src="cim.png" alt="Kép a parlagfűről"></td>
+
+                    </tr>
+                    <tr id="sor2">
+                        <td class="kozep">Előfordulása</td>
+                        <td class="kozep">Fejlődése</td>
+                        <td class="kozep">Terjedése</td>
+                        <td class="kozep">Parlagfű allergia</td>
+                        <td class="kozep">Megelőzés</td>
+                        <td class="kozep">Irtási módszerek</td>
+                    </tr>
+                    <tr>
+                        <td colspan="6">
+                          <h1> Irtási módszerek</h1> 
+                            A parlagfű irtását folyamatosan kell végezni. A növényt a virágzása előtt kell elpusztítani, hogy ne szórhasson virágport, és ne érlelhessen termést.
+                           <ul><li>Gyomlálás: A virágzó parlagfű irtását ne bízzuk gyerekekre, mert az erős pollenkoncentráció a levegőben kiválthatja a lappangó allergiát. Kerülni kell a virágzó növény közvetlen érintését, mert az is allergiás reakciót válthat ki. Ilyenkor a kézi irtást kesztyűben kell végezni.</li> 
+                           <li> Kaszálás: A környezetet és a költségeket is leginkább kímélő eljárás. A fiatal növényeket tömeges megjelenésük után, minél előbb tanácsos kaszálni. A talajszinten a gyökérnyaki résznél kell a növény szárát elvágni. Ez a legbiztosabb módszer, mivel a növények nem tudnak újrahajtani. Ha ezzel elkéstünk, az egyszeri kaszálás már nem eredményezi a parlagfű kiirtását, mert a növény az alacsonyan elhelyezkedő oldalrügyeiből 3-4 oldalhajtást nevel, és pár hét múlva újra virágba borul. Általában három kaszálás biztosít megfelelő eredményt. Ha a háromszori kaszálás nem valósítható meg, úgy az egyszeri kaszálás a virágzást közvetlenül megelőző időszakban a leghatékonyabb.</li>
+                          <li> Vegyszeres gyomirtás: A parlagfű terjedése gyomirtó szerek használata nélkül nem állítható meg. Azonban vegyszeres kezeléseket csak olyan helyen szabad alkalmazni, ahol ez embereket és főként gyermekeket semmilyen módon nem veszélyeztet. Az irtás a korai növekedési fázisban a hatleveles állapotáig hatásos.</li> 
+                          <li> Életlehetőségeinek csökkentése: Mivel a parlagfű zárt növénytakaró mellett nem fejlődik, kiszorítható jól fejlődő növényzet telepítésével, és fűmagvetéssel, gyep telepítésével. A dús vegetáció mellett a parlagfű ki fog szorulni. </li>  </ul>                           
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+
+    </table>
+
 </body>
+
 </html>
